--- a/PoraBoglarka_BMI_fit.ipynb
+++ b/PoraBoglarka_BMI_fit.ipynb
@@ -855,7 +855,7 @@
       "cell_type": "code",
       "source": [
         "plt.figure(figsize=(12, 6))\n",
-        "sns.histplot(kaggle_data['Suly (kg)'], bins=30, kde=True, color=palette[1])\n",
+        "sns.histplot(kaggle_data['Suly (kg)'], bins=30, kde=False, color=palette[1])\n",
         "\n",
         "plt.title('Testsúlyok Eloszlása', color=label_color, fontsize=12)\n",
         "plt.xlabel('Testsúly (kg)', color=label_color)\n",
@@ -908,7 +908,7 @@
       "cell_type": "code",
       "source": [
         "plt.figure(figsize=(12, 6))\n",
-        "sns.histplot(kaggle_data['BMI'], bins=30, kde=True, color=palette[2])\n",
+        "sns.histplot(kaggle_data['BMI'], bins=30, kde=False, color=palette[2])\n",
         "\n",
         "plt.title('BMI Eloszlása', color=label_color, fontsize=12)\n",
         "plt.xlabel('BMI', color=label_color)\n",
@@ -1124,7 +1124,7 @@
       "cell_type": "code",
       "source": [
         "plt.figure(figsize=(12, 6))\n",
-        "sns.histplot(own_data['Magassag (m)'], bins=30, kde=True, color=palette[0])\n",
+        "sns.histplot(own_data['Magassag (m)'], bins=30, kde=False, color=palette[0])\n",
         "\n",
         "plt.title('Magasságok Eloszlása', color=label_color, fontsize=12)\n",
         "plt.xlabel('Magasság (m)', color=label_color)\n",
@@ -1175,7 +1175,7 @@
       "cell_type": "code",
       "source": [
         "plt.figure(figsize=(12, 6))\n",
-        "sns.histplot(own_data['Suly (kg)'], bins=30, kde=True, color=palette[1])\n",
+        "sns.histplot(own_data['Suly (kg)'], bins=30, kde=False, color=palette[1])\n",
         "\n",
         "plt.title('Testsúlyok Eloszlása', color=label_color, fontsize=12)\n",
         "plt.xlabel('Testsúly (kg)', color=label_color)\n",
@@ -1226,7 +1226,7 @@
       "cell_type": "code",
       "source": [
         "plt.figure(figsize=(12, 6))\n",
-        "sns.histplot(own_data['BMI'], bins=30, kde=True, color=palette[2])\n",
+        "sns.histplot(own_data['BMI'], bins=30, kde=False, color=palette[2])\n",
         "\n",
         "plt.title('BMI Eloszlása', color=label_color, fontsize=12)\n",
         "plt.xlabel('BMI', color=label_color)\n",
